<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIAK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="silakan_login">Silakan login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="univ_ibn_khaldun">Universitas Ibn Khaldun Bogor</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="nilai">Nilai</string>
    <string name="frs">FRS</string>
    <string name="keuangan">Keuangan</string>
    <string name="info">Info</string>
    <string name="Jadwal">Jadwal</string>
    <string name="waktu_session_habis">Waktu session habis</string>
    <string name="Pengaturan_Session">Pengaturan Session</string>
    <string name="Pengaturan_Password">Pengaturan Password</string>
    <string name="ubah_password">Ubah Sandi</string>
    <string name="saran">Saran</string>
    <string name="kirim_saran_ke_pengembang">Kirim saran ke pengembang</string>
    <string name="session">Session</string>
    <string name="Menentukan_waktu_session_habis">Menentukan waktu session habis</string>
    <string name="mengubah_password">Mengubah sandi pengguna</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Sandi Baru</string>
    <string name="ulangi_sandi_baru">Ulangi Sandi Baru</string>
    <string name="simpan">Simpan</string>
    <string name="loading">Loading</string>
    <string name="harap_tunggu">Harap tunggu &#8230;</string>
    <string name="login_gagal">Login gagal &#8230;</string>
    <string name="username_or_password_is_wrong">Username/Password salah </string>
    <string name="please_enter_username_or_password">Harap masukkan Username atau Password</string>
    <string name="Password_Anda_berhasil_di_simpan">Password Anda berhasil di simpan</string>
    <string name="Password_baru_Anda_tidak_cocok">Password baru Anda tidak cocok</string>
    <string name="Password_minimal_4_karakter">Password minimal 4 karakter</string>
    <string name="Password_lama_yang_Anda_masukkan_salah">Password lama yang Anda masukkan salah</string>
    <string name="kirim_saran">Kirim Saran</string>
    <string name="judul">Judul</string>
    <string name="judul_saran">Judul Saran</string>
    <string name="isi_saran">Isi Saran</string>
    <string name="profil">Profil</string>
    <string name="kode">Kode</string>
    <string name="departement_code">Departemen Code</string>
    <string name="gender">Gender</string>
    <string name="birthplace">Birthplace</string>
    <string name="agama">Agama</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="email">Email</string>
    <string name="divider_jadwal">-</string>
    <string name="image">image</string>
    <string name="Sub_Menu_Pengaturan">Sub Menu Pengaturan</string>
    <string name="Keterangan">Keterangan</string>
    <string name="divider_day">:</string>
    <string name="jadwal_perkuliahan">Jadwal Perkuliahan</string>
    <string name="hari">Hari</string>
    <string name="cari">Cari</string>
    <string name="matakuliah">Matakuliah</string>
    <string name="ruangan">Ruang</string>
    <string name="dosen">Dosen</string>
    <string name="Waktu">Waktu</string>
    <string name="semester">Semester</string>
    <string name="Tambah_tugas">Tambah tugas</string>
    <string name="ingatkan_aku">Ingatkan aku</string>
    <string name="jam_sebelum_mata_kuliah_dimulai">jam sebelum mata kuliah dimulai</string>
    <string name="tidak_ada_tugas">Tidak ada tugas</string>
    <string name="Kelas">Kelas</string>

</resources>