<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_profil_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_judul_saran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/judul_saran" >
    </EditText>

    <EditText
        android:id="@+id/et_isi_saran"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/isi_saran"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bt_kirim_saran"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/buttonshape_animated"
        android:shadowColor="#85196F"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/kirim_saran"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>