<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_detail_nama_matkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/hari"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et_matakuliah"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/matakuliah" >
        </EditText>

        <Button
            android:id="@+id/bt_cari"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape_animated"
            android:drawableLeft="@drawable/search_white_small"
            android:drawableStart="@drawable/search_white_small"
            android:shadowColor="#85196F"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="1"
            android:text="@string/cari"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" >
    </ListView>

</LinearLayout>