<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/background_pink"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_mata_kuliah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#317a05" />

        <TextView
            android:id="@+id/tv_Dosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_hari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_divider_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/divider_day"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_time_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/divider_jadwal"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_time_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_detail_nama_matkul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="5dp"
                android:text="@string/ruangan"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_detail_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider_day"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>